tests/snapshots/generator__advanced_create_files@_1000_1_1.snap
---
source: tests/generator.rs
expression: "&golden"
---
About 1,000 files will be generated in approximately 1,000 directories distributed across a tree of maximum depth 1 where each directory contains approximately 1,000 other directories.
Created 725 files across 714 directories.

/0
/0.dir
/1.dir
/10.dir
/100.dir
/101.dir
/102.dir
/103.dir
/104.dir
/105.dir
/106.dir
/107.dir
/108.dir
/109.dir
/11.dir
/110.dir
/111.dir
/112.dir
/113.dir
/114.dir
/115.dir
/116.dir
/117.dir
/118.dir
/119.dir
/12.dir
/120.dir
/121.dir
/122.dir
/123.dir
/124.dir
/125.dir
/126.dir
/127.dir
/128.dir
/129.dir
/13.dir
/130.dir
/131.dir
/132.dir
/133.dir
/134.dir
/135.dir
/136.dir
/137.dir
/138.dir
/139.dir
/14.dir
/140.dir
/141.dir
/142.dir
/143.dir
/144.dir
/145.dir
/146.dir
/147.dir
/148.dir
/149.dir
/15.dir
/150.dir
/151.dir
/152.dir
/153.dir
/154.dir
/155.dir
/156.dir
/157.dir
/158.dir
/159.dir
/16.dir
/160.dir
/161.dir
/162.dir
/163.dir
/164.dir
/165.dir
/166.dir
/167.dir
/168.dir
/169.dir
/17.dir
/170.dir
/171.dir
/172.dir
/173.dir
/174.dir
/175.dir
/176.dir
/177.dir
/178.dir
/179.dir
/18.dir
/180.dir
/181.dir
/182.dir
/183.dir
/184.dir
/185.dir
/186.dir
/187.dir
/188.dir
/189.dir
/19.dir
/190.dir
/191.dir
/192.dir
/193.dir
/194.dir
/195.dir
/196.dir
/197.dir
/198.dir
/199.dir
/2.dir
/20.dir
/200.dir
/201.dir
/202.dir
/203.dir
/204.dir
/205.dir
/206.dir
/207.dir
/208.dir
/209.dir
/21.dir
/210.dir
/211.dir
/212.dir
/213.dir
/214.dir
/215.dir
/216.dir
/217.dir
/218.dir
/219.dir
/22.dir
/220.dir
/221.dir
/222.dir
/223.dir
/224.dir
/225.dir
/226.dir
/227.dir
/228.dir
/229.dir
/23.dir
/230.dir
/231.dir
/232.dir
/233.dir
/234.dir
/235.dir
/236.dir
/237.dir
/238.dir
/239.dir
/24.dir
/240.dir
/241.dir
/242.dir
/243.dir
/244.dir
/245.dir
/246.dir
/247.dir
/248.dir
/249.dir
/25.dir
/250.dir
/251.dir
/252.dir
/253.dir
/254.dir
/255.dir
/256.dir
/257.dir
/258.dir
/259.dir
/26.dir
/260.dir
/261.dir
/262.dir
/263.dir
/264.dir
/265.dir
/266.dir
/267.dir
/268.dir
/269.dir
/27.dir
/270.dir
/271.dir
/272.dir
/273.dir
/274.dir
/275.dir
/276.dir
/277.dir
/278.dir
/279.dir
/28.dir
/280.dir
/281.dir
/282.dir
/283.dir
/284.dir
/285.dir
/286.dir
/287.dir
/288.dir
/289.dir
/29.dir
/290.dir
/291.dir
/292.dir
/293.dir
/294.dir
/295.dir
/296.dir
/297.dir
/298.dir
/299.dir
/3.dir
/30.dir
/300.dir
/301.dir
/302.dir
/303.dir
/304.dir
/305.dir
/306.dir
/307.dir
/308.dir
/309.dir
/31.dir
/310.dir
/311.dir
/312.dir
/313.dir
/314.dir
/315.dir
/316.dir
/317.dir
/318.dir
/319.dir
/32.dir
/320.dir
/321.dir
/322.dir
/323.dir
/324.dir
/325.dir
/326.dir
/327.dir
/328.dir
/329.dir
/33.dir
/330.dir
/331.dir
/332.dir
/333.dir
/334.dir
/335.dir
/336.dir
/337.dir
/338.dir
/339.dir
/34.dir
/340.dir
/341.dir
/342.dir
/343.dir
/344.dir
/345.dir
/346.dir
/347.dir
/348.dir
/349.dir
/35.dir
/350.dir
/351.dir
/352.dir
/353.dir
/354.dir
/355.dir
/356.dir
/357.dir
/358.dir
/359.dir
/36.dir
/360.dir
/361.dir
/362.dir
/363.dir
/364.dir
/365.dir
/366.dir
/367.dir
/368.dir
/369.dir
/37.dir
/370.dir
/371.dir
/372.dir
/373.dir
/374.dir
/375.dir
/376.dir
/377.dir
/378.dir
/379.dir
/38.dir
/380.dir
/381.dir
/382.dir
/383.dir
/384.dir
/385.dir
/386.dir
/387.dir
/388.dir
/389.dir
/39.dir
/390.dir
/391.dir
/392.dir
/393.dir
/394.dir
/395.dir
/396.dir
/397.dir
/398.dir
/399.dir
/4.dir
/40.dir
/400.dir
/401.dir
/402.dir
/403.dir
/404.dir
/405.dir
/406.dir
/407.dir
/408.dir
/409.dir
/41.dir
/410.dir
/411.dir
/412.dir
/413.dir
/414.dir
/415.dir
/416.dir
/417.dir
/418.dir
/419.dir
/42.dir
/420.dir
/421.dir
/422.dir
/423.dir
/424.dir
/425.dir
/426.dir
/427.dir
/428.dir
/429.dir
/43.dir
/430.dir
/431.dir
/432.dir
/433.dir
/434.dir
/435.dir
/436.dir
/437.dir
/438.dir
/439.dir
/44.dir
/440.dir
/441.dir
/442.dir
/443.dir
/444.dir
/445.dir
/446.dir
/447.dir
/448.dir
/449.dir
/45.dir
/450.dir
/451.dir
/452.dir
/453.dir
/454.dir
/455.dir
/456.dir
/457.dir
/458.dir
/459.dir
/46.dir
/460.dir
/461.dir
/462.dir
/463.dir
/464.dir
/465.dir
/466.dir
/467.dir
/468.dir
/469.dir
/47.dir
/470.dir
/471.dir
/472.dir
/473.dir
/474.dir
/475.dir
/476.dir
/477.dir
/478.dir
/479.dir
/48.dir
/480.dir
/481.dir
/482.dir
/483.dir
/484.dir
/485.dir
/486.dir
/487.dir
/488.dir
/489.dir
/49.dir
/490.dir
/491.dir
/492.dir
/493.dir
/494.dir
/495.dir
/496.dir
/497.dir
/498.dir
/499.dir
/5.dir
/50.dir
/500.dir
/501.dir
/502.dir
/503.dir
/504.dir
/505.dir
/506.dir
/507.dir
/508.dir
/509.dir
/51.dir
/510.dir
/511.dir
/512.dir
/513.dir
/514.dir
/515.dir
/516.dir
/517.dir
/518.dir
/519.dir
/52.dir
/520.dir
/521.dir
/522.dir
/523.dir
/524.dir
/525.dir
/526.dir
/527.dir
/528.dir
/529.dir
/53.dir
/530.dir
/531.dir
/532.dir
/533.dir
/534.dir
/535.dir
/536.dir
/537.dir
/538.dir
/539.dir
/54.dir
/540.dir
/541.dir
/542.dir
/543.dir
/544.dir
/545.dir
/546.dir
/547.dir
/548.dir
/549.dir
/55.dir
/550.dir
/551.dir
/552.dir
/553.dir
/554.dir
/555.dir
/556.dir
/557.dir
/558.dir
/559.dir
/56.dir
/560.dir
/561.dir
/562.dir
/563.dir
/564.dir
/565.dir
/566.dir
/567.dir
/568.dir
/569.dir
/57.dir
/570.dir
/571.dir
/572.dir
/573.dir
/574.dir
/575.dir
/576.dir
/577.dir
/578.dir
/579.dir
/58.dir
/580.dir
/581.dir
/582.dir
/583.dir
/584.dir
/585.dir
/586.dir
/587.dir
/588.dir
/589.dir
/59.dir
/590.dir
/591.dir
/592.dir
/593.dir
/594.dir
/595.dir
/596.dir
/597.dir
/598.dir
/599.dir
/6.dir
/60.dir
/600.dir
/601.dir
/602.dir
/603.dir
/604.dir
/605.dir
/606.dir
/607.dir
/608.dir
/609.dir
/61.dir
/610.dir
/611.dir
/612.dir
/613.dir
/614.dir
/615.dir
/616.dir
/617.dir
/618.dir
/619.dir
/62.dir
/620.dir
/621.dir
/622.dir
/623.dir
/624.dir
/625.dir
/626.dir
/627.dir
/628.dir
/629.dir
/63.dir
/630.dir
/631.dir
/632.dir
/633.dir
/634.dir
/635.dir
/636.dir
/637.dir
/638.dir
/639.dir
/64.dir
/640.dir
/641.dir
/642.dir
/643.dir
/644.dir
/645.dir
/646.dir
/647.dir
/648.dir
/649.dir
/65.dir
/650.dir
/651.dir
/652.dir
/653.dir
/654.dir
/655.dir
/656.dir
/657.dir
/658.dir
/659.dir
/66.dir
/660.dir
/661.dir
/662.dir
/663.dir
/664.dir
/665.dir
/666.dir
/667.dir
/668.dir
/669.dir
/67.dir
/670.dir
/671.dir
/672.dir
/673.dir
/674.dir
/675.dir
/676.dir
/677.dir
/678.dir
/679.dir
/68.dir
/680.dir
/681.dir
/682.dir
/683.dir
/684.dir
/685.dir
/686.dir
/687.dir
/688.dir
/689.dir
/69.dir
/690.dir
/691.dir
/692.dir
/693.dir
/694.dir
/695.dir
/696.dir
/697.dir
/698.dir
/699.dir
/7.dir
/70.dir
/700.dir
/701.dir
/702.dir
/703.dir
/704.dir
/705.dir
/706.dir
/707.dir
/708.dir
/709.dir
/71.dir
/710.dir
/711.dir
/712.dir
/713.dir
/72.dir
/73.dir
/74.dir
/75.dir
/76.dir
/77.dir
/78.dir
/79.dir
/8.dir
/80.dir
/81.dir
/82.dir
/83.dir
/84.dir
/85.dir
/86.dir
/87.dir
/88.dir
/89.dir
/9.dir
/90.dir
/91.dir
/92.dir
/93.dir
/94.dir
/95.dir
/96.dir
/97.dir
/98.dir
/99.dir
/0.dir/0
/1.dir/0
/1.dir/1
/10.dir/0
/100.dir/0
/101.dir/0
/101.dir/1
/102.dir/0
/103.dir/0
/104.dir/0
/105.dir/0
/106.dir/0
/108.dir/0
/109.dir/0
/11.dir/0
/11.dir/1
/110.dir/0
/111.dir/0
/113.dir/0
/114.dir/0
/115.dir/0
/116.dir/0
/117.dir/0
/117.dir/1
/118.dir/0
/119.dir/0
/12.dir/0
/120.dir/0
/121.dir/0
/122.dir/0
/123.dir/0
/124.dir/0
/125.dir/0
/125.dir/1
/126.dir/0
/128.dir/0
/129.dir/0
/13.dir/0
/130.dir/0
/131.dir/0
/131.dir/1
/132.dir/0
/133.dir/0
/135.dir/0
/135.dir/1
/136.dir/0
/137.dir/0
/138.dir/0
/138.dir/1
/139.dir/0
/14.dir/0
/14.dir/1
/140.dir/0
/141.dir/0
/142.dir/0
/142.dir/1
/143.dir/0
/144.dir/0
/145.dir/0
/146.dir/0
/148.dir/0
/149.dir/0
/15.dir/0
/15.dir/1
/150.dir/0
/151.dir/0
/152.dir/0
/153.dir/0
/153.dir/1
/154.dir/0
/154.dir/1
/155.dir/0
/156.dir/0
/157.dir/0
/158.dir/0
/159.dir/0
/16.dir/0
/160.dir/0
/160.dir/1
/161.dir/0
/161.dir/1
/162.dir/0
/163.dir/0
/163.dir/1
/164.dir/0
/164.dir/1
/165.dir/0
/165.dir/1
/166.dir/0
/167.dir/0
/169.dir/0
/17.dir/0
/170.dir/0
/171.dir/0
/171.dir/1
/172.dir/0
/173.dir/0
/173.dir/1
/174.dir/0
/175.dir/0
/176.dir/0
/177.dir/0
/178.dir/0
/179.dir/0
/18.dir/0
/180.dir/0
/183.dir/0
/184.dir/0
/185.dir/0
/186.dir/0
/186.dir/1
/187.dir/0
/188.dir/0
/189.dir/0
/19.dir/0
/191.dir/0
/191.dir/1
/193.dir/0
/194.dir/0
/195.dir/0
/196.dir/0
/197.dir/0
/199.dir/0
/20.dir/0
/200.dir/0
/201.dir/0
/203.dir/0
/204.dir/0
/205.dir/0
/206.dir/0
/206.dir/1
/207.dir/0
/208.dir/0
/209.dir/0
/209.dir/1
/21.dir/0
/210.dir/0
/211.dir/0
/212.dir/0
/213.dir/0
/213.dir/1
/214.dir/0
/215.dir/0
/216.dir/0
/217.dir/0
/219.dir/0
/22.dir/0
/220.dir/0
/221.dir/0
/222.dir/0
/222.dir/1
/223.dir/0
/223.dir/1
/224.dir/0
/225.dir/0
/226.dir/0
/226.dir/1
/227.dir/0
/228.dir/0
/23.dir/0
/230.dir/0
/231.dir/0
/233.dir/0
/235.dir/0
/235.dir/1
/236.dir/0
/237.dir/0
/238.dir/0
/239.dir/0
/24.dir/0
/240.dir/0
/243.dir/0
/244.dir/0
/245.dir/0
/245.dir/1
/246.dir/0
/248.dir/0
/248.dir/1
/249.dir/0
/25.dir/0
/250.dir/0
/251.dir/0
/252.dir/0
/254.dir/0
/254.dir/1
/256.dir/0
/256.dir/1
/257.dir/0
/258.dir/0
/259.dir/0
/26.dir/0
/26.dir/1
/260.dir/0
/261.dir/0
/262.dir/0
/263.dir/0
/264.dir/0
/265.dir/0
/266.dir/0
/268.dir/0
/269.dir/0
/27.dir/0
/270.dir/0
/271.dir/0
/272.dir/0
/273.dir/0
/274.dir/0
/276.dir/0
/277.dir/0
/278.dir/0
/279.dir/0
/28.dir/0
/280.dir/0
/281.dir/0
/282.dir/0
/283.dir/0
/284.dir/0
/285.dir/0
/287.dir/0
/287.dir/1
/288.dir/0
/289.dir/0
/29.dir/0
/29.dir/1
/290.dir/0
/291.dir/0
/292.dir/0
/293.dir/0
/294.dir/0
/295.dir/0
/296.dir/0
/296.dir/1
/297.dir/0
/298.dir/0
/299.dir/0
/3.dir/0
/300.dir/0
/301.dir/0
/302.dir/0
/304.dir/0
/305.dir/0
/306.dir/0
/307.dir/0
/308.dir/0
/309.dir/0
/31.dir/0
/310.dir/0
/311.dir/0
/312.dir/0
/314.dir/0
/316.dir/0
/317.dir/0
/318.dir/0
/319.dir/0
/319.dir/1
/32.dir/0
/320.dir/0
/321.dir/0
/322.dir/0
/323.dir/0
/325.dir/0
/326.dir/0
/326.dir/1
/327.dir/0
/329.dir/0
/33.dir/0
/330.dir/0
/331.dir/0
/331.dir/1
/332.dir/0
/333.dir/0
/333.dir/1
/334.dir/0
/336.dir/0
/336.dir/1
/337.dir/0
/338.dir/0
/339.dir/0
/34.dir/0
/34.dir/1
/340.dir/0
/341.dir/0
/342.dir/0
/343.dir/0
/344.dir/0
/346.dir/0
/347.dir/0
/348.dir/0
/349.dir/0
/35.dir/0
/35.dir/1
/351.dir/0
/352.dir/0
/353.dir/0
/355.dir/0
/356.dir/0
/358.dir/0
/359.dir/0
/36.dir/0
/360.dir/0
/361.dir/0
/362.dir/0
/363.dir/0
/364.dir/0
/365.dir/0
/366.dir/0
/368.dir/0
/368.dir/1
/369.dir/0
/37.dir/0
/370.dir/0
/372.dir/0
/373.dir/0
/374.dir/0
/375.dir/0
/376.dir/0
/377.dir/0
/378.dir/0
/378.dir/1
/379.dir/0
/380.dir/0
/383.dir/0
/383.dir/1
/384.dir/0
/385.dir/0
/386.dir/0
/388.dir/0
/389.dir/0
/39.dir/0
/390.dir/0
/390.dir/1
/391.dir/0
/392.dir/0
/393.dir/0
/394.dir/0
/395.dir/0
/396.dir/0
/397.dir/0
/397.dir/1
/398.dir/0
/399.dir/0
/399.dir/1
/4.dir/0
/40.dir/0
/40.dir/1
/400.dir/0
/402.dir/0
/403.dir/0
/403.dir/1
/404.dir/0
/405.dir/0
/406.dir/0
/407.dir/0
/408.dir/0
/409.dir/0
/410.dir/0
/410.dir/1
/411.dir/0
/412.dir/0
/412.dir/1
/413.dir/0
/414.dir/0
/414.dir/1
/415.dir/0
/416.dir/0
/419.dir/0
/419.dir/1
/42.dir/0
/42.dir/1
/420.dir/0
/421.dir/0
/422.dir/0
/423.dir/0
/424.dir/0
/425.dir/0
/426.dir/0
/428.dir/0
/430.dir/0
/430.dir/1
/431.dir/0
/431.dir/1
/432.dir/0
/432.dir/1
/433.dir/0
/433.dir/1
/434.dir/0
/435.dir/0
/437.dir/0
/437.dir/1
/438.dir/0
/438.dir/1
/439.dir/0
/44.dir/0
/440.dir/0
/441.dir/0
/442.dir/0
/443.dir/0
/444.dir/0
/445.dir/0
/446.dir/0
/447.dir/0
/448.dir/0
/449.dir/0
/449.dir/1
/45.dir/0
/451.dir/0
/452.dir/0
/452.dir/1
/453.dir/0
/454.dir/0
/455.dir/0
/456.dir/0
/457.dir/0
/458.dir/0
/459.dir/0
/46.dir/0
/46.dir/1
/461.dir/0
/462.dir/0
/463.dir/0
/464.dir/0
/464.dir/1
/465.dir/0
/467.dir/0
/469.dir/0
/47.dir/0
/47.dir/1
/470.dir/0
/471.dir/0
/472.dir/0
/473.dir/0
/474.dir/0
/475.dir/0
/476.dir/0
/477.dir/0
/478.dir/0
/479.dir/0
/48.dir/0
/480.dir/0
/481.dir/0
/482.dir/0
/482.dir/1
/483.dir/0
/483.dir/1
/484.dir/0
/485.dir/0
/486.dir/0
/487.dir/0
/488.dir/0
/488.dir/1
/489.dir/0
/491.dir/0
/492.dir/0
/493.dir/0
/495.dir/0
/496.dir/0
/497.dir/0
/498.dir/0
/499.dir/0
/499.dir/1
/50.dir/0
/50.dir/1
/500.dir/0
/501.dir/0
/502.dir/0
/502.dir/1
/503.dir/0
/504.dir/0
/505.dir/0
/506.dir/0
/506.dir/1
/508.dir/0
/509.dir/0
/51.dir/0
/510.dir/0
/511.dir/0
/512.dir/0
/514.dir/0
/515.dir/0
/516.dir/0
/517.dir/0
/517.dir/1
/518.dir/0
/518.dir/1
/519.dir/0
/519.dir/1
/520.dir/0
/521.dir/0
/522.dir/0
/522.dir/1
/523.dir/0
/523.dir/1
/524.dir/0
/525.dir/0
/526.dir/0
/527.dir/0
/528.dir/0
/528.dir/1
/529.dir/0
/53.dir/0
/53.dir/1
/530.dir/0
/531.dir/0
/532.dir/0
/533.dir/0
/534.dir/0
/535.dir/0
/536.dir/0
/538.dir/0
/539.dir/0
/540.dir/0
/541.dir/0
/542.dir/0
/543.dir/0
/544.dir/0
/546.dir/0
/547.dir/0
/548.dir/0
/549.dir/0
/55.dir/0
/550.dir/0
/551.dir/0
/552.dir/0
/553.dir/0
/554.dir/0
/555.dir/0
/556.dir/0
/557.dir/0
/558.dir/0
/558.dir/1
/559.dir/0
/56.dir/0
/560.dir/0
/560.dir/1
/561.dir/0
/561.dir/1
/562.dir/0
/562.dir/1
/563.dir/0
/564.dir/0
/564.dir/1
/565.dir/0
/568.dir/0
/569.dir/0
/57.dir/0
/571.dir/0
/571.dir/1
/572.dir/0
/573.dir/0
/574.dir/0
/575.dir/0
/576.dir/0
/577.dir/0
/578.dir/0
/579.dir/0
/58.dir/0
/580.dir/0
/580.dir/1
/581.dir/0
/581.dir/1
/582.dir/0
/583.dir/0
/584.dir/0
/585.dir/0
/585.dir/1
/586.dir/0
/586.dir/1
/587.dir/0
/588.dir/0
/589.dir/0
/59.dir/0
/590.dir/0
/591.dir/0
/591.dir/1
/592.dir/0
/594.dir/0
/596.dir/0
/598.dir/0
/599.dir/0
/6.dir/0
/60.dir/0
/600.dir/0
/601.dir/0
/603.dir/0
/604.dir/0
/605.dir/0
/607.dir/0
/608.dir/0
/61.dir/0
/611.dir/0
/613.dir/0
/614.dir/0
/615.dir/0
/616.dir/0
/617.dir/0
/618.dir/0
/618.dir/1
/62.dir/0
/620.dir/0
/621.dir/0
/621.dir/1
/622.dir/0
/624.dir/0
/624.dir/1
/625.dir/0
/625.dir/1
/626.dir/0
/628.dir/0
/628.dir/1
/629.dir/0
/630.dir/0
/632.dir/0
/633.dir/0
/634.dir/0
/635.dir/0
/636.dir/0
/637.dir/0
/637.dir/1
/638.dir/0
/639.dir/0
/64.dir/0
/640.dir/0
/641.dir/0
/642.dir/0
/643.dir/0
/644.dir/0
/645.dir/0
/646.dir/0
/647.dir/0
/647.dir/1
/648.dir/0
/649.dir/0
/650.dir/0
/651.dir/0
/652.dir/0
/652.dir/1
/653.dir/0
/653.dir/1
/654.dir/0
/655.dir/0
/656.dir/0
/657.dir/0
/658.dir/0
/660.dir/0
/662.dir/0
/662.dir/1
/663.dir/0
/666.dir/0
/668.dir/0
/669.dir/0
/670.dir/0
/671.dir/0
/671.dir/1
/672.dir/0
/672.dir/1
/673.dir/0
/676.dir/0
/678.dir/0
/68.dir/0
/680.dir/0
/681.dir/0
/682.dir/0
/684.dir/0
/685.dir/0
/688.dir/0
/689.dir/0
/69.dir/0
/690.dir/0
/691.dir/0
/692.dir/0
/693.dir/0
/693.dir/1
/694.dir/0
/695.dir/0
/696.dir/0
/697.dir/0
/698.dir/0
/70.dir/0
/70.dir/1
/700.dir/0
/701.dir/0
/701.dir/1
/702.dir/0
/703.dir/0
/704.dir/0
/704.dir/1
/705.dir/0
/706.dir/0
/707.dir/0
/708.dir/0
/709.dir/0
/71.dir/0
/710.dir/0
/711.dir/0
/713.dir/0
/72.dir/0
/73.dir/0
/74.dir/0
/75.dir/0
/76.dir/0
/77.dir/0
/78.dir/0
/79.dir/0
/8.dir/0
/80.dir/0
/81.dir/0
/81.dir/1
/84.dir/0
/85.dir/0
/86.dir/0
/87.dir/0
/88.dir/0
/89.dir/0
/90.dir/0
/91.dir/0
/92.dir/0
/93.dir/0
/94.dir/0
/95.dir/0
/96.dir/0
/97.dir/0
/98.dir/0
/98.dir/1
/99.dir/0

0x558192bc1608db1c
